[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lda-topic-modeling"
version = "1.0.0"
description = "Latent Dirichlet Allocation via Coordinate Ascent Variational Inference"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    "numpy>=1.24",
    "pandas>=1.5",
    "scipy>=1.10",
    "scikit-learn>=1.2",
    "matplotlib>=3.6",
    "seaborn>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "jupyter>=1.0",
]

[tool.setuptools.packages.find]
include = ["lda_topic_modeling*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
